ocm/memory/ocm-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocm-controller
  namespace: multicluster-engine
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 6060
    protocol: TCP
    targetPort: 6060
  selector:
    control-plane: ocm-controller
  sessionAffinity: None
  type: ClusterIP
